<resources>
    <!--Fundamental app strings-->
    <string name="app_name">tpot</string>
    <string name="API_URL">https://tpot.space/tasks/</string>
    <string name="client_id">264007239616-gv1ib14d9qdju864gbp529249mm62ucq.apps.googleusercontent.com</string>
    <string name="TEST_SUB">111589791051790050333</string>

    <!-- Strings related to NavBar -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_events">Events</string>
    <string name="nav_finance">Finance</string>
    <string name="nav_recipes">Recipes</string>
    <string name="nav_overview">Overview</string>
    <string name="nav_maps">Maps</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Events</item>
        <item>Finance</item>
        <item>Recipes</item>
        <item>Overview</item>
        <item>Maps</item>
        <item>Settings</item>
    </string-array>


    <string-array name="listArray">
            <item>Headings</item>
            <item>Headings and Details</item>
            <item>All Data</item>
    </string-array>

    <string-array name="listValues">
            <item>1</item>
            <item>2</item>
            <item>3</item>
    </string-array>


    <string-array name="filterItems">
        <item>Vegan</item>
        <item>Vegetarian</item>
        <item>Dairy-Free</item>
        <item>Gluten-Free</item>
    </string-array>

    <string-array name="dietItems">
        <item>Vegan</item>
        <item>Vegetarian</item>
        <item>Pescetarian</item>
        <item>Lacto-Vegetarian</item>
        <item>Ovo-Vegetarian</item>
    </string-array>
    <string-array name="dietValues">
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
    </string-array>

    <string-array name="intoleranceItems">
        <item>Dairy</item>
        <item>Egg</item>
        <item>Gluten</item>
        <item>Peanut</item>
        <item>Sesame</item>
        <item>Seafood</item>
        <item>Shellfish</item>
        <item>Soy</item>
        <item>Sulfites</item>
        <item>Tree Nuts</item>
        <item>Wheat</item>
    </string-array>

    <string-array name="intoleranceValues">
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
    </string-array>






    <string name="activity_title_about_us">About Us</string>
    <string name="about_us"> </string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>

    <!-- Strings related to login -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="signed_out">Signed out</string>
    <string name="title_text">Sign In</string>
    <string name="subtitle_text">or sign up using a Google Account</string>
    <string name="flavour_text_login">Our app uses Google SignIn using secure OAuth2 to manage its accounts. Read more about this here: </string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="loading">Loading..</string>
    <string name="id_token_fmt">ID Token: %s</string>
    <string name="signed_in">Signed in</string>

    <string name="element_text">Element</string>
    <string name="grid_layout_manager">Grid Layout Manager</string>
    <string name="linear_layout_manager">Linear Layout Manager</string>
    <string name="other">Other</string>
    <string name="user_name">Niall Walsh</string>
    <string name="user_email">www.tpot.space</string>
    <string name="title">Title</string>
    <string name="profile_image">http://ionicmaterial.com/assets/img/logo.png</string>
    <string name="calendarId">primary</string>
    <string name="recipe_search">recipe_search</string>
    <string name="search_hint">search recipes</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="monday"><![CDATA[< Monday >]]></string>
    <string name="label">tpot</string>

</resources>