<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".activity.LoginActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_weight="0.18"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="tpot.io beta"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/title_text"
        style="@android:style/Widget.Material.Light.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.34"
        android:gravity="center"
        android:text="@string/title_text"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:textColor="@color/primary_dark"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/subtitle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/subtitle_text" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:elevation="2dp"
        android:paddingTop="15dp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/society_signin_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_weight="0.18"
        android:text="or if you run a society, sign in here:" />

    <Button
        android:id="@+id/society_signin"
        style="@android:style/Widget.Material.Light.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_weight="0.18"
        android:elevation="2dp"
        android:text="SOCIETY SIGN IN" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:text="@string/flavour_text_login" />

    <TextView
        android:id="@+id/googlesignin_link"
        style="@android:style/Widget.DeviceDefault.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_weight="0.09"
        android:elevation="4dp"
        android:text="Google Identity Platform"
        android:textColor="@color/common_google_signin_btn_text_light_pressed"
        android:textSize="14sp"
        tools:textColor="@android:color/black" />


</LinearLayout>
